3.6.0-beta6 - ??? 

* 10676: Upgrade to Java 17.0.1+12 for Windows, Mac packages
* 10667: Private Message windows no longer prompt to ignore every time you
    close them; incoming private messages do not grab focus
* 10663: Fix occasional draw-side exceptions during loading game and saving
    screenshots
* 10660: Report translated name for Symbolic Die Faces
* 10659: Sanitize temporary file names a bit earlier
* 10658: Fix NPE if try to open translations but the buildable doesn't exist
* 10654: Fixed corner-case NPE when closing a game
* 10650: Show X,Y in Configurer when repositioning At Start Stack
* 10649: Deck can start face-up or face-down when using right-click menu
    setting
* 10648: Private chat windows will no longer steal focus
* 10647: Private Maps visible to non-owning players will correctly display
    Mouseover text
* 10643: Show saved game mismatch warnings (e.g., loading wrong version) when
    loading from Wizard
* 10641: When Editor changes a prototype, clear the prototype cache and all
    PieceSlot caches
* 10640: Tidier right arrow symbol in default move reports
* 10639: Fix exception when canceling edit of a component that has been
    elsewhere moved or deleted
* 10638: Fixed NPE if pasting a cut component that was then deleted before
    pasting
* 10636: Warn when Global Property has a blank name (which causes NPE on game
    load)
* 10635: Trigger Action traits with "loop until" and "loop while" conditions
    can properly access piece properties in expression builder
* 10633: Remove doubled images from Ghost Bug Pref
* 10632: Fix ArrayIndexOutOfBoundsException in Embellishment when layer value
    is out of range
* 10631: Clip pieces to their bounds and set rendering hints for drag image
* 10630: Correctly check if there are sides with blank passwords for password
    matching
* 10629: String Array Configurer bounds protection
* 10628: Autopeek Rollover
* 10623: Fix NPE joining chat room when socket drops early