@@ -25,6 +25,9 @@
         { "num": 9391, "desc": "Beanshell can now access $$ variables in Report Formats" }
       ],
       "bug_fixes": [
+        { "num": 10679, "desc": "Place Marker, Send-to-Location, and Translate traits didn't always repaint maps" },
+        { "num": 10678, "desc": "Undo of movement will no longer deny lone stackable pieces their own stack" },
+        { "num": 10671, "desc": "Calculate Hex Range correctly, regardless of hex shape" },
         { "num": 10663, "desc": "Fix occasional draw-side exceptions during loading game and saving screenshots" },
         { "num": 10660, "desc": "Report translated name for Symbolic Die Faces" },
         { "num": 10659, "desc": "Sanitize temporary file names a bit earlier" },
@@ -45,8 +48,11 @@
         { "num": 10618, "desc": "ToolbarMenus that are submenus of other ToolbarMenus display their icons properly" }
       ],
       "other_improvements": [
-        { "num"  10676, "Upgrade to Java 17.0.1+12 for Windows, Mac packages" },
+        { "num": 10681, "Better documented pieceName vs PieceName" },
+        { "num": 10676, "Upgrade to Java 17.0.1+12 for Windows, Mac packages" },
+        { "num": 10673, "desc": "Added Game Refresher documentation" },
         { "num": 10667, "desc": "Private Message windows no longer prompt to ignore every time you close them; incoming private messages do not grab focus" },
+        { "num": 10652, "desc": "Zone Editor shows coordinates of vertices while editing" },
         { "num": 10641, "desc": "When Editor changes a prototype, clear the prototype cache and all PieceSlot caches" },
         { "num": 10633, "desc": "Remove doubled images from Ghost Bug Pref" },
         { "num": 10650, "desc": "Show X,Y in Configurer when repositioning At Start Stack" },
